lnrpc+walletrpc: add RPCs for new PSBT methods
